# simumatik-driver-manager

./: .gitignore  MANIFEST.in  README.md  driver_manager.py  driver_tester.py  pyproject.toml  requirements  requirements.mac  requirements.windows
driver_manager/: __init__.py  driver_manager.py  driver_tester.py
driver_manager/drivers/: __init__.py  driver.py
driver_manager/drivers/acs_spiiplus/: acs_spiiplus.py
driver_manager/drivers/allenbradley_logix/: allenbradley_logix.py
driver_manager/drivers/cprog_cri/: cprog_cri.py
driver_manager/drivers/enip_generic_device/: enip_generic_device.py
driver_manager/drivers/epson_rcapi/: epson_rcapi.py
driver_manager/drivers/fanuc_roboguide/: fanuc_roboguide.py
driver_manager/drivers/hokuyo_uam/: hokuyo_uam.py
driver_manager/drivers/igus_irc/: __init__.py  igus_irc.py
driver_manager/drivers/kuka_varproxy/: kuka_varproxy.py
driver_manager/drivers/micro800_http/: micro800_http.py
driver_manager/drivers/mqtt_client/: mqtt_client.py
driver_manager/drivers/omron_fins/: omron_fins.py
driver_manager/drivers/omron_nexsocket/: omron_nexsocket.py
driver_manager/drivers/opcda_client/: opcda_client.py
driver_manager/drivers/opcua_client/: opcua_client.py
driver_manager/drivers/plcsim/: plcsim.py
driver_manager/drivers/plcsim_advanced/: plcsim_advanced.py
driver_manager/drivers/robodk_api/: robodk_api.py
driver_manager/drivers/robotware/: robotware.py
driver_manager/drivers/rosbridge/: rosbridge.py
drivers/opcua_client/: opcua_client.py
tests/: setup_data.py  test_driver.py
(+6 files in other folders)
